    with the correct line breaking.
- Added: new, experimental implementation of pairwise image registration,
    with more accurate metric computation and support for arbitrary floating
    image interpolation. These are accessible through the new "registrationx"
    command line tool.
- Added: single-step mass-preserving reformatting in reformatx tool. Also
    added a new test to cover this.

- Improved: more sophisticated install and packaging configuration; still not
    fully clear how that translates into separated packages for different
    components.
- Improved: ported everything related to Qt to use the actual Qt4 classes, so
    we can finally get rid of legacy Qt3 support classes. This should reduce
    the number of actually unused dynamic libraries, which we previously had
    to link against.
- Improved: numerous small improvements to triplanar viewer
- Improved: dcm2image tool now numbers images only if there would otherwise be
    filename collisions. The printf()-type numbering has been replaced with
    two new output path substitutions, "%n" and "%N". Both expand to the empty
    string when a path is already unique without numbering. Otherwise, "%n"
    substitutes to an increasing number, and "%N" substitutes to the same
    number with a leading dash, "-". So using "./%n/image%N.nii" generates a
    single file ".//image.nii" if that is a unique path, or a sequence of
    images "./1/image-1.nii", "./2/image-2.nii" for up to ten colliding
    paths. For larger numbers of collisions, the number of digits is
    automatically increased as necessary.

- Fixed: bundled DICOM library finally works on all tested platforms and all
    tested compilers.
- Fixed: compile error on latest Mac/Intel gcc due to undefined "ushort"
    type.
- Fixed: triplanar can now be called again with no parameters to open empty
    viewer UI.

- Removed: support for AMD Core Math Library (ACML), which was rarely used and
    complicated code unnecessarily